--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dago Romer</h1>
+								<h1>Dagoberto Romer</h1>
+								<h2>Subtitle Here</h2>
 								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
