--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
+							<div class="embedtest">
+								<h1>POWERBI EMBED TEST</h1>
+								<embed src="https://app.powerbi.com" style="width:500px; height: 400px;">
+							</div>
 						</div>
 						<nav>
 							<ul>
