--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 							<div class="embedtest">
-								<h1>POWERBI EMBED TEST</h1>
-								<embed src="https://app.powerbi.com" style="width:500px; height: 400px;">
+								<h1>Snowflake EMBED TEST</h1>
+								<embed src="https://mutua-azpredev.snowflakecomputing.com/" style="width:500px; height: 400px;">
 							</div>
 						</div>
 						<nav>
